--- a/styles/typography.css
+++ b/styles/typography.css
@@ -118,6 +118,12 @@ h2 {
     text-align: right;
 }
 
+@media screen and (max-width: 280px) {
+    .h2alternate {
+        text-align: center;
+    }
+}
+
 .sliderTitle1 {
     background-color: var(--offWhite);
 
@@ -153,6 +159,13 @@ h2 {
     }
 }
 
+@media screen and (max-width: 280px) {
+    .sliderTitle1 {
+        margin-top: 14rem;
+        margin-bottom: 10rem;
+    }
+}
+
 .sliderTitle2 {
     background-color: var(--offWhite);
 
@@ -178,6 +191,7 @@ h2 {
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
 }
 
+
 @media screen and (max-width: 768px) {
     .sliderTitle2 {
         left: 3rem;
@@ -187,6 +201,14 @@ h2 {
         margin-bottom: 12rem;
         min-width: 3.7rem;
         max-height: 7rem;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .sliderTitle2 {
+        left: 1.7rem;
+        margin-top: 14rem;
+        margin-bottom: 10rem;
     }
 }
 
